--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,6 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="Common" value="https://pkgs.dev.azure.com/xpericad/_packaging/Common/nuget/v3/index.json" />
+    <add key="Common@Local" value="https://pkgs.dev.azure.com/xpericad/_packaging/Common%40Local/nuget/v3/index.json" />
   </packageSources>
 </configuration>
